# kb0tll

./: README.md  render.yaml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
frontend/: angular.json  package-lock.json  package.json  vercel.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/data/: nets.data.ts  repeaters.data.ts
frontend/src/app/features/about/pages/about/: about.html  about.ts
frontend/src/app/features/calendar/pages/calendar/: calendar.html  calendar.scss  calendar.spec.ts  calendar.ts
frontend/src/app/features/gallery/pages/gallery/: gallery.html  gallery.ts
frontend/src/app/features/home/data/: home.data.ts
frontend/src/app/features/home/pages/home/: home.html  home.ts
frontend/src/app/features/leadership/pages/leadership/: leadership.html  leadership.ts
frontend/src/app/features/member-photos/pages/member-photos/: member-photos.html  member-photos.spec.ts  member-photos.ts
frontend/src/app/features/recap/pages/recap/: recap.html  recap.scss  recap.spec.ts  recap.ts
frontend/src/app/layout/site-footer/: site-footer.html
frontend/src/app/layout/site-header/: site-header.html  site-header.spec.ts  site-header.ts
