[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Taylor Turner",email = "tjt.email1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi",
    "psycopg[binary]",
    "python-dotenv",
    "uvicorn[standard]",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
